argocd-helm-charts/kyverno/templates/replace-container-image-registries/.kyverno-test/digest-specified.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: digest-specified
spec:
  containers:
    - name: velero
      image: docker.io/velero/velero@sha256:3608bca1e44ea6c4d268eb6db02260269892c0b42b86bbf1e77a6fa16c3c9282
