argocd-helm-charts/kyverno/templates/replace-container-image-registries/.kyverno-test/tag-unspecified.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tag-unspecified
spec:
  containers:
    - name: velero
      image: docker.io/velero/velero
